@@ -1,2 +1,2 @@
-#define VERSION     "7.01"
+#define VERSION     "7.02"
 #define RELEASE     "1992-2007"
